# cc3dsfs

./: .gitignore  95-usbdscapture.rules  CMakeLists.txt  LICENSE  README.md  linux_setup_ftd3xx.sh  macos_bundle_setup.sh  macos_setup_ftd3xx.sh  un_quarantine_macos.sh  windows_setup_ftd3xx.bat
.github/workflows/: cd.yml  cd_main.yml  cd_master.yml  cd_pr.yml
android/: gradle.properties
android/app/: build.gradle.kts
data/: MacOSXBundleInfo.plist.in
docker-scripts/: docker_build_android  docker_build_android_apk  docker_build_android_libraries  docker_build_android_sfml_single_arch  docker_build_android_single_arch  docker_build_arm32  docker_build_arm64  docker_build_base  docker_build_riscv64  docker_build_x86_32  docker_build_x86_64  docker_config_android_sfml_single_arch
docker-scripts/build-dockers/: Dockerfile  Dockerfile_Android  build-builder.sh  docker_build_starter  linux_compile_install_packages.sh  linux_install_arch_packages.sh  linux_install_packages.sh  linux_install_shared_packages.sh  push_builder.sh
ftdi_lib_files/: notice.md
ftdi_lib_files/2022/07/: libftd2xx-arm-v7-hf-1.4.27.tgz  libftd2xx-arm-v8-1.4.27.tgz  libftd2xx-x86_32-1.4.27.tgz  libftd2xx-x86_64-1.4.27.tgz
ftdi_lib_files/2023/03/: d3xx-osx.1.0.5.dmg  libftd3xx-linux-arm-v7_32-1.0.5.tgz  libftd3xx-linux-arm-v8-1.0.5.tgz  libftd3xx-linux-x86_32-1.0.5.tgz  libftd3xx-linux-x86_64-1.0.5.tgz
ftdi_lib_files/2024/04/: D2XX1.4.30.dmg
include/: 3dscapture.hpp  3dscapture_ftd3.hpp  3dscapture_ftdi.hpp  AudioMenu.hpp  ConnectionMenu.hpp  CropMenu.hpp  ExtraButtons.hpp  MainMenu.hpp  OffsetMenu.hpp  OptionSelectionMenu.hpp  PARMenu.hpp  RotationMenu.hpp  TextRectangle.hpp  TextRectanglePool.hpp  VideoMenu.hpp  WindowCommands.hpp  audio.hpp  audio_data.hpp  capture_structs.hpp  conversions.hpp  devicecapture.hpp  display_structs.hpp  dscapture_ftd2.hpp  event_structs.hpp  frontend.hpp  hw_defs.hpp  libgpiod_compat.h  sfml_gfx_structs.hpp  shaders_list.hpp  usb_ds_3ds_capture.hpp  usb_generic.hpp  usb_is_nitro.hpp  usb_is_nitro_capture.hpp  utils.hpp
include/CaptureDeviceSpecific/: 3dscapture_ftd3.hpp  dscapture_ftd2.hpp  usb_ds_3ds_capture.hpp  usb_generic.hpp
include/Menus/: ActionSelectionMenu.hpp  AudioDeviceMenu.hpp  AudioMenu.hpp  BFIMenu.hpp  ColorCorrectionMenu.hpp  ConnectionMenu.hpp  CropMenu.hpp  ExtraSettingsMenu.hpp  FileConfigMenu.hpp  GenericMenu.hpp  ISNitroMenu.hpp  InputMenu.hpp  LicenseMenu.hpp  Main3DMenu.hpp  MainMenu.hpp  OffsetMenu.hpp  Optimize3DSMenu.hpp  OptimizeOldFWConfigMenu.hpp  OptimizeSerialKeyAddMenu.hpp  OptionSelectionMenu.hpp  PARMenu.hpp  PartnerCTRMenu.hpp  RelativePositionMenu.hpp  ResolutionMenu.hpp  RotationMenu.hpp  ScalingRatioMenu.hpp  SecondScreen3DRelativePositionMenu.hpp  SeparatorMenu.hpp  ShortcutMenu.hpp  StatusMenu.hpp  USBConflictResolutionMenu.hpp  VideoEffectsMenu.hpp  VideoMenu.hpp
other licenses/: bin_files.txt  ftd3xx.txt  gericom_isne.txt  libftdi.txt  sfml.txt  sorts_mill_goudy_tt.txt
rpi_setup/: changelog.txt  instructions.txt  setup.sh
rpi_setup/files/: config.txt  kiosk_single_execution_script.sh
rpi_setup/files/etc/: rc.local
setup_scripts/: ftd_shared_symbols.txt  ftd_shared_symbols_macos.txt  ftd_shared_symbols_special_windows.txt  ftd_shared_symbols_special_windows32.txt  install_usb_rules.sh  libusb_ftd2_shared_symbols.txt  macos_bundle_setup.sh  macos_bundle_signature.sh  macos_setup_ftd2xx.sh  rpi_mono_setup_setup.sh  windows_setup_ftd2xx.bat  windows_setup_ftd2xx.sh  windows_setup_ftd2xx_dll.bat  windows_setup_ftd2xx_dll.sh  windows_setup_ftd3xx.bat  windows_setup_ftd3xx.sh  windows_setup_ftd3xx_dll.bat  windows_setup_ftd3xx_dll.sh  windows_setup_ftd3xx_winusb.bat  windows_setup_ftd3xx_winusb.sh  windows_setup_ftd3xx_winusb_dll.bat  windows_setup_ftd3xx_winusb_dll.sh
shaders/: bit_crusher_fragment_shader.2_to_x_1_7.frag  bit_merger_crusher_fragment_shader.2_to_x_1_6.frag  bit_merger_crusher_fragment_shader_7.frag  bit_merger_fragment_shader.2_to_x_0_6.frag  bit_merger_fragment_shader_7.frag  color_emulation_fragment_shader.frag  frame_blending_bit_crusher_fragment_shader.2_to_x_1_7.frag  frame_blending_fragment_shader.frag  no_effect_fragment_shader.frag
source/: 3dscapture.cpp  3dscapture_ftd3.cpp  3dscapture_ftdi.cpp  CaptureDataBuffers.cpp  ConnectionMenu.cpp  CropMenu.cpp  ExtraButtons.cpp  MainMenu.cpp  OffsetMenu.cpp  OptionSelectionMenu.cpp  PARMenu.cpp  RotationMenu.cpp  TextRectangle.cpp  TextRectanglePool.cpp  VideoMenu.cpp  WindowCommands.cpp  WindowScreen.cpp  WindowScreen_Menu.cpp  audio.cpp  audio_data.cpp  cc3dsfs.cpp  conversions.cpp  devicecapture.cpp  dscapture_ftd2.cpp  frontend.cpp  libgpiod_compat.cpp  shaders_list_template.cpp  usb_ds_3ds_capture.cpp  usb_is_nitro.cpp  usb_is_nitro_capture.cpp  utils.cpp
source/CaptureDeviceSpecific/: 3dscapture_ftd3.cpp  dscapture_ftd2.cpp  usb_ds_3ds_capture.cpp  usb_generic.cpp
source/Menus/: ActionSelectionMenu.cpp  AudioDeviceMenu.cpp  AudioMenu.cpp  BFIMenu.cpp  ColorCorrectionMenu.cpp  ConnectionMenu.cpp  CropMenu.cpp  ExtraSettingsMenu.cpp  FileConfigMenu.cpp  ISNitroMenu.cpp  InputMenu.cpp  LicenseMenu.cpp  Main3DMenu.cpp  MainMenu.cpp  OffsetMenu.cpp  Optimize3DSMenu.cpp  OptimizeOldFWConfigMenu.cpp  OptimizeSerialKeyAddMenu.cpp  OptionSelectionMenu.cpp  PARMenu.cpp  PartnerCTRMenu.cpp  RelativePositionMenu.cpp  ResolutionMenu.cpp  RotationMenu.cpp  ScalingRatioMenu.cpp  SecondScreen3DRelativePositionMenu.cpp  SeparatorMenu.cpp  ShortcutMenu.cpp  StatusMenu.cpp  USBConflictResolutionMenu.cpp  VideoEffectsMenu.cpp  VideoMenu.cpp
toolchains/: linux_arm32.cmake  linux_arm64.cmake  linux_riscv64.cmake  linux_win32.cmake  linux_win64.cmake  linux_x86_32.cmake  linux_x86_64.cmake
tools/: CMakeLists.txt  bin2c.cpp  prepare_rename_symbols_list.cpp  rename_lib_functions.cpp  rename_symbols_list.cpp  shader2c.cpp
usb_rules/: 50-ftd2xx.rules  51-ftd2xx.rules  51-isagb.rules  51-iscgb.rules  51-isctr.rules  51-isnitro.rules  51-issnake.rules  51-isspr.rules  51-istwl.rules  51-nisetro.rules  51-optimize.rules  51-partnerctr.rules  95-usb3dscapture.rules
(+128 files in other folders)
